# lana-bot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
config/: exchange copy.toml  strategy.toml
data/: exit_state.json  fast_scan_state.json  network_status.json  risk_state.json  square_cache.json  state.json  symbol_scores.json
data/reviews/: 2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  changelog.md  daily_notes.txt  latest.json
launchd/: com.lana-bot.cycle.plist  com.lana-bot.monitor.plist  com.lana-bot.review.plist
scripts/: collect.py  cycle.sh  cycle.sh.save  dashboard.py  decide.py  execute.py  fast_scan.py  monitor.py  review.py  review_cycle.sh  run_cycle.sh
src/lana_bot/: __init__.py  config.py  equity.py
src/lana_bot/data/: aggregator.py  binance_futures.py  binance_square.py  market_regime.py
src/lana_bot/execution/: __init__.py  base.py  binance.py  gate.py  simulator.py
src/lana_bot/risk/: circuit_breaker.py  exit_engine.py  exit_rules.py  risk_engine.py  stop_loss.py  symbol_score.py
src/lana_bot/state/: journal.py  positions.py  risk_score_state.py
templates/: dashboard.html
