[project]
name = "lana-bot"
version = "0.1.0"
description = "AI-assisted Binance futures trading bot (dry-run first)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "loguru>=0.7",
    "playwright>=1.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lana_bot"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
